--- a/SF.SGL.UI/_Imports.razor
+++ b/SF.SGL.UI/_Imports.razor
@@ -1,13 +1,22 @@
 ﻿@using System.Net.Http
 @using System.Net.Http.Json
+
+@using Microsoft.AspNetCore.Authorization
+@using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
+@using Microsoft.AspNetCore.Components.WebAssembly.Authentication
+@using Microsoft.Extensions.Configuration
 @using Microsoft.JSInterop
+
 @using SF.SGL.UI
 @using SF.SGL.UI.Shared
+@using SF.SGL.UI.Pages.Login
 
 @using Radzen
 @using Radzen.Blazor
+
+@attribute [Authorize]
